// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-typography component should allow semantic component to be passed in and variant styling applied 1`] = `
<ic-typography class="ic-typography-h1" variant="h1">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <h3>
    IC Typography Test
  </h3>
</ic-typography>
`;

exports[`ic-typography component should apply className provided to root element to typography element 1`] = `
<ic-typography class="ic-typography-body test-class">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  IC Typography Test
</ic-typography>
`;

exports[`ic-typography component should apply vertical margins class if vertical margins prop true 1`] = `
<ic-typography apply-vertical-margins="" class="ic-typography-body ic-typography-vertical-margins-body">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  IC Typography Test
</ic-typography>
`;

exports[`ic-typography component should render badge small with badge-small variant 1`] = `
<ic-typography class="ic-typography-badge-small" variant="badge-small">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  IC Typography Test
</ic-typography>
`;

exports[`ic-typography component should render badge with badge variant 1`] = `
<ic-typography class="ic-typography-badge" variant="badge">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  IC Typography Test
</ic-typography>
`;

exports[`ic-typography component should render caption uppercase variant 1`] = `
<ic-typography class="ic-typography-caption-uppercase" variant="caption-uppercase">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  IC Typography Test
</ic-typography>
`;

exports[`ic-typography component should render caption variant 1`] = `
<ic-typography class="ic-typography-caption" variant="caption">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  IC Typography Test
</ic-typography>
`;

exports[`ic-typography component should render code extra small with code-extra-small variant 1`] = `
<ic-typography class="ic-typography-code-extra-small" variant="code-extra-small">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  IC Typography Test
</ic-typography>
`;

exports[`ic-typography component should render code large with code-large variant 1`] = `
<ic-typography class="ic-typography-code-large" variant="code-large">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  IC Typography Test
</ic-typography>
`;

exports[`ic-typography component should render code small with code-small variant 1`] = `
<ic-typography class="ic-typography-code-small" variant="code-small">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  IC Typography Test
</ic-typography>
`;

exports[`ic-typography component should render h1 with h1 variant 1`] = `
<ic-typography class="ic-typography-h1" variant="h1">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  IC Typography Test
</ic-typography>
`;

exports[`ic-typography component should render h2 with h2 variant 1`] = `
<ic-typography class="ic-typography-h2" variant="h2">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  IC Typography Test
</ic-typography>
`;

exports[`ic-typography component should render h3 with h3 variant 1`] = `
<ic-typography class="ic-typography-h3" variant="h3">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  IC Typography Test
</ic-typography>
`;

exports[`ic-typography component should render h4 with h4 variant 1`] = `
<ic-typography class="ic-typography-h4" variant="h4">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  IC Typography Test
</ic-typography>
`;

exports[`ic-typography component should render h5 with subtitle-large variant 1`] = `
<ic-typography class="ic-typography-subtitle-large" variant="subtitle-large">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  IC Typography Test
</ic-typography>
`;

exports[`ic-typography component should render h6 with subtitle-small variant 1`] = `
<ic-typography class="ic-typography-subtitle-small" variant="subtitle-small">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  IC Typography Test
</ic-typography>
`;

exports[`ic-typography component should render label uppercase with label-uppercase variant 1`] = `
<ic-typography class="ic-typography-label-uppercase" variant="label-uppercase">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  IC Typography Test
</ic-typography>
`;

exports[`ic-typography component should render label with label variant 1`] = `
<ic-typography class="ic-typography-label" variant="label">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  IC Typography Test
</ic-typography>
`;

exports[`ic-typography component should render the typography with truncation 1`] = `
<ic-typography class="ic-typography-body" max-lines="3">
  <mock:shadow-root>
    <div class="trunc-wrapper">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Body of text that is truncated to three lines. Click the 'See more' link to expand the text, then click 'See less' to truncate the text once more! Dripper caramelization java saucer grounds galão, mocha, and robusta kopi-luwak, percolator, instant, qui saucer latte in brewed café au lait. Con panna, cup, cream, body americano affogato cup espresso, rich milk seasonal saucer grinder spoon that cultivar strong redeye frappuccino barista extraction redeye mazagran.
  <span style="visibility: hidden;"></span>
</ic-typography>
`;

exports[`ic-typography component should render the typography with truncation 2`] = `
<ic-typography class="ic-typography-body" max-lines="3">
  <mock:shadow-root>
    <div class="trunc-wrapper">
      <slot></slot>
    </div>
    <button aria-hidden="true" class="trunc-btn">
      See more
    </button>
  </mock:shadow-root>
  Body of text that is truncated to three lines. Click the 'See more' link to expand the text, then click 'See less' to truncate the text once more! Dripper caramelization java saucer grounds galão, mocha, and robusta kopi-luwak, percolator, instant, qui saucer latte in brewed café au lait. Con panna, cup, cream, body americano affogato cup espresso, rich milk seasonal saucer grinder spoon that cultivar strong redeye frappuccino barista extraction redeye mazagran.
  <span style="visibility: hidden;"></span>
</ic-typography>
`;

exports[`ic-typography component should render with body variant 1`] = `
<ic-typography class="ic-typography-body" variant="body">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  IC Typography Test
</ic-typography>
`;

exports[`ic-typography component should render with default body styles 1`] = `
<ic-typography class="ic-typography-body">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  IC Typography Test
</ic-typography>
`;
